--- a/packages/excalidraw/components/dropdownMenu/DropdownMenu.scss
+++ b/packages/excalidraw/components/dropdownMenu/DropdownMenu.scss
@@ -44,16 +44,6 @@
       font-family: inherit;
     }
 
-    &.max-items-8 {
-      // display max 8 items per list, where each has 2rem height, 0.25rem top margin and 1px bottom margin
-      // to limit unespected `scrollIntoView` on top / bottom edge
-      max-height: calc(8 * (2rem + 0.25rem + 1px));
-
-      .dropdown-menu-item-base {
-        display: inline-flex;
-      }
-    }
-
     &.manual-hover {
       // disable built-in hover due to keyboard navigation
       .dropdown-menu-item {
@@ -68,6 +58,35 @@
         &--selected {
           background-color: var(--color-primary-light) !important;
         }
+      }
+    }
+
+    &.fonts {
+      margin-top: 1rem;
+      // display max 7 items per list, where each has 2rem (2.25) height and 1px margin top & bottom
+      // count in 2 groups, where each allocates 1.3*0.75rem font-size and 0.5rem margin bottom, plus one extra 1rem margin top
+      max-height: calc(7 * (2rem + 2px) + 2 * (0.5rem + 1.3 * 0.75rem) + 1rem);
+
+      @media screen and (min-width: 1921px) {
+        max-height: calc(
+          7 * (2.25rem + 2px) + 2 * (0.5rem + 1.3 * 0.75rem) + 1rem
+        );
+      }
+
+      .dropdown-menu-item-base {
+        display: inline-flex;
+      }
+
+      .dropdown-menu-group:not(:first-child) {
+        margin-top: 1rem;
+      }
+
+      .dropdown-menu-group-title {
+        font-size: 0.75rem;
+        text-align: left;
+        font-weight: 400;
+        margin: 0 0 0.5rem;
+        line-height: 1.3;
       }
     }
 
