--- a/packages/excalidraw/components/QuickSearch.scss
+++ b/packages/excalidraw/components/QuickSearch.scss
@@ -8,7 +8,7 @@
 
     svg {
       position: absolute;
-      top: 50%;
+      top: 47.5%; // 50% is not exactly in the center of the input
       transform: translateY(-50%);
       left: 0.75rem;
       width: 1.25rem;
